Add API specification and generate server
